Wrote AchievementTest Fixed calcPoints in AchievementDiagonal